--- a/opciones.html
+++ b/opciones.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hernandez Motores - Opciones</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/opciones.css">
 </head>
 <body>
@@ -21,22 +21,14 @@
             <path d="M3 19l6 -6"></path>
             <path d="M15 13l6 6"></path>
           </svg>
-        <button  onclick="location.href='formulario.html'">Generar Reclamo</button>
+        <button  onclick="location.href='reclamos.html'">Generar Reclamo</button>
       </div>
-      <div class="option">
-        <svg class="invert-color" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="48" height="48" stroke-width="1.5">
-          <path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0"></path>
-          <path d="M12 18c-.328 0 -.652 -.017 -.97 -.05c-3.172 -.332 -5.85 -2.315 -8.03 -5.95c2.4 -4 5.4 -6 9 -6c3.465 0 6.374 1.853 8.727 5.558"></path>
-          <path d="M18 18m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"></path>
-          <path d="M20.2 20.2l1.8 1.8"></path>
-        </svg>
-        <button onclick="location.href='ver_estado_reclamo.html'">Ver Estado Reclamo</button>
-      </div>
+    
       <div class="option">
         <svg class="invert-color" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" width="48" height="48" stroke-width="1.5" stroke-linejoin="round" stroke-linecap="round" stroke="currentColor">
             <path d="M7 11v8a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1v-7a1 1 0 0 1 1 -1h3a4 4 0 0 0 4 -4v-1a2 2 0 0 1 4 0v5h3a2 2 0 0 1 2 2l-1 5a2 3 0 0 1 -2 2h-7a3 3 0 0 1 -3 -3"></path>
           </svg>
-        <button onclick="location.href='encuesta_satisfaccion.html'">Encuesta Satisfacción</button>
+        <button onclick="location.href='encuesta.html'">Encuesta Satisfacción</button>
       </div>
     </div>
     <a href="index.html" class="logout">Salir</a>
