--- a/buscar.html
+++ b/buscar.html
@@ -72,6 +72,22 @@
               <td>Reclamo sobre repuestos</td>
               <td><button class="ver-btn" onclick="openModal('María González', '2024-04-12', 'Resuelto', 'Reclamo sobre repuestos')">Ver</button></td>
             </tr>
+            <tr>
+              <td>003</td>
+              <td>Pedro Ocarez</td>
+              <td>2024-04-13</td>
+              <td class="resuelto">Resuelto</td>
+              <td>Auto con problemas</td>
+              <td><button class="ver-btn" onclick="openModal('María González', '2024-04-12', 'Resuelto', 'Reclamo sobre repuestos')">Ver</button></td>
+            </tr>
+            <tr>
+              <td>002</td>
+              <td>Hernán López</td>
+              <td>2024-04-12</td>
+              <td class="resuelto">Resuelto</td>
+              <td>Mala atención al Cliente</td>
+              <td><button class="ver-btn" onclick="openModal('María González', '2024-04-12', 'Resuelto', 'Reclamo sobre repuestos')">Ver</button></td>
+            </tr>
           </tbody>
         </table>
       </div>
