Maqueta general html lista

--- a/form_interno.html
+++ b/form_interno.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formulario de Reclamo</title>
-  <link rel="stylesheet" href="css/formulario.css">
+  <title>Reclamo Interno</title>
+  <link rel="stylesheet" href="css/form_interno.css">
 </head>
 <body>
   <div class="formulario-container">
     <!-- Botones Cerrar y Volver -->
     <div class="formulario-top-buttons">
       <a href="index.html" class="formulario-btn-link">Cerrar</a>
-      <a href="opciones.html" class="formulario-btn-link">Volver</a>
+      <a href="reclamos.html" class="formulario-btn-link">Volver</a>
     </div>
 
     <!-- Logo -->
@@ -20,7 +20,7 @@
     </div>
 
     <!-- Título -->
-    <h1 class="formulario-titulo">Formulario de Reclamo</h1>
+    <h1 class="formulario-titulo">Formulario de Reclamo Interno</h1>
 
     <!-- Formulario -->
     <form class="formulario-form">
