--- a/reclamos.html
+++ b/reclamos.html
@@ -21,17 +21,17 @@
     <div class="options-grid">
       <div class="option">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="48" height="48" stroke-width="1"> <path d="M9 21v-6a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2"></path> <path d="M19 13.488v-1.488h2l-9 -9l-9 9h2v7a2 2 0 0 0 2 2h4.525"></path> <path d="M15 19l2 2l4 -4"></path> </svg> 
-        <button  onclick="location.href='formulario.html'">Reclamo Interno</button>
+        <button  onclick="location.href='form_interno.html'">Reclamo Interno</button>
       </div>
 
       <div class="option">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="48" height="48" stroke-width="1"> <path d="M3 21l18 0"></path> <path d="M5 21v-14l8 -4v18"></path> <path d="M19 21v-10l-6 -4"></path> <path d="M9 9l0 .01"></path> <path d="M9 12l0 .01"></path> <path d="M9 15l0 .01"></path> <path d="M9 18l0 .01"></path> </svg> 
-        <button  onclick="location.href='formulario.html'">Reclamo Externo</button>
+        <button  onclick="location.href='form_externo.html'">Reclamo Externo</button>
       </div>
 
       <div class="option">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="48" height="48" stroke-width="1"> <path d="M12 9v4"></path> <path d="M10.363 3.591l-8.106 13.534a1.914 1.914 0 0 0 1.636 2.871h16.214a1.914 1.914 0 0 0 1.636 -2.87l-8.106 -13.536a1.914 1.914 0 0 0 -3.274 0z"></path> <path d="M12 16h.01"></path> </svg> 
-        <button  onclick="location.href='formulario.html'">Reclamo Sernac</button>
+        <button  onclick="location.href='reclamos.html'">Reclamo Sernac</button>
       </div>
     
       <div class="option">
